--- a/scb-ui-zk/src/main/webapp/pages/common/template/side-menu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/template/side-menu.zul
@@ -14,7 +14,7 @@
 			<a	id="HOME"
 				iconSclass="z-icon-home" 
 				visible="@load(!vm.isUserLogged())"
-				href="/" 
+				href="/pages/index.zul" 
 				tooltiptext="Home">
 				<label value="Home"/>
 			</a>
