--- a/scb-ui-zk/src/main/webapp/pages/public/zapomenute-heslo.zul
+++ b/scb-ui-zk/src/main/webapp/pages/public/zapomenute-heslo.zul
@@ -1,6 +1,6 @@
+<?page title="${common:getOrgNameStatic()} - ${c:l('txt.ui.forgottenPassword')}" contentType="text/html;charset=UTF-8" ?>
 <?meta http-equiv="Content-Type" content="text/html; charset=UTF-8"?>
 <?component name="headline" macroURI="/pages/common/template/page-headline.zul" inline="true"?>
-<?page title="${c:l('txt.Login')}"?>
 <?init class="org.zkoss.zk.ui.util.Composition" arg0="/pages/common/template/template.zul"?>
 <?taglib uri="http://www.zkoss.org/dsp/web/core" prefix="c" ?>
 
