--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/prihlaska-do-klubu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/prihlaska-do-klubu.zul
@@ -1,5 +1,11 @@
+<?page title="${common:getOrgNameStatic()} - ${c:l('txt.ui.menu.application')}" contentType="text/html;charset=UTF-8" ?>
 <?link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"?>
 <?link rel="icon" type="image/x-icon" href="/favicon.ico"?>
+
+<?taglib uri="http://www.zkoss.org/dsp/web/core" prefix="c" ?>
+<?xel-method prefix="common" name="getOrgNameStatic"
+	class="com.jzaoralek.scb.ui.common.vm.BaseVM"
+	signature="com.jzaoralek.scb.ui.common.vm.BaseVM getOrgNameStatic()"?>
 
 <zk>
 	<include src="/pages/shared/prihlaska-do-klubu.zul" />
