--- a/scb-ui-zk/src/main/webapp/pages/common/login.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/login.zul
@@ -81,20 +81,12 @@
 				</html>
 			</div>
 			
-			<div sclass="login-frame-right">
-				<a label="Sportologic" sclass="brand" href="/"/>
-				<label sclass="txt" value="Pokud ještě nemáte své přihlašovací údaje, zaregistrujte se pomocí vyplnění přihlášky."/>
-				<button label="Přihláška" href="/pages/public/prihlaska-do-klubu.zul" sclass="lpp"/>
-			</div>
+			<login-frame-right />
 		</div>
 		
-		<div sclass="login-mobile-info">
-			<div sclass="clear"></div>
-			<div sclass="frame">
-				<a label="Sportologic" sclass="brand" href="/"/>
-				<label sclass="txt" value="Pokud ještě nemáte své přihlašovací údaje, zaregistrujte se pomocí vyplnění přihlášky."/>
-				<button label="Přihláška" href="/pages/public/prihlaska-do-klubu.zul" sclass="lpp"/>
-			</div>
+		<login-mobile-info/>
+		<div sclass="footer">
+			<login-footer/>
 		</div>
 	</div>
 </zk>
