--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/kurz-vyuka.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/kurz-vyuka.zul
@@ -72,7 +72,8 @@
 							        
 							        <listhead>
 							        	<listheader label="${c:l('txt.ui.common.date')}" align="left" sort="auto(lessonDate)" hflex="min" />
-										<listheader label="${c:l('txt.ui.common.time')}" align="left" />
+										<listheader label="${c:l('txt.ui.common.time')}" align="left" hflex="1" />
+										<listheader label="${c:l('txt.ui.common.Output')}" align="min" />										
 							            <listheader label="Proběhla" align="center" hflex="min" />
 							        </listhead>
 							         
@@ -89,7 +90,8 @@
 							                <listcell>
 							                	<label value="@load(each.timeFrom) @converter(vm.timeConverter)" /> - 
 							                	<label value="@load(each.timeTo) @converter(vm.timeConverter)" />
-							                </listcell>              	
+							                </listcell>
+							                <listcell label="${each.additionalColumnInt}" />             	
 							                <listcell sclass="big-icon" iconSclass="z-icon-check-circle" style="color: #87B87F; font-size: large;" tooltiptext="${c:l('txt.ui.common.yes')}" visible="${each.uuid ne null}" />
 			                				<listcell visible="${each.uuid eq null}" />
 							            </listitem>
