mail to user filter

--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/message.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/message.zul
@@ -56,7 +56,11 @@
 											placeholder="${c:l('txt.ui.common.To')}" 
 											mold="rounded"
 											style="margin-bottom: 10px;"
-											autodrop="true" />
+											autodrop="false" >
+											<bandpopup hflex="1" height="530px" id="mailToPopup" >
+												<mail-recipient-selection hflex="1" popupId="mailToPopup" />												
+											</bandpopup>
+										</bandbox>
 										<bandbox id="ccTxt" hflex="1" 
 											sclass="form-input-text"
 											value="@bind(vm.mailCc)"
